0.1.3
  - Add change queue
  - Update docs for remove queue: action is delete
  - Wrong action name used for remove channel
  - Put message is documented
  - Add set authrec

0.1.2
  - Add reset qmgr
  - Add create/copy/remove channel
  - Use MQINQMP for reading MQRFH2 properties
  - User/Pwd for connecting to a queuemanager
  - Remove premake4 support

0.1.1
  - Return a HTTP status when a POCO exception occurs.
  - Improve queuemanager pool management
  - Add clear queue
  - Add ping qmgr
  - Add get message
  - Add browse message
  - Add inquire chlauth
  - Add set chlauth
  - Browse statistics/accounting messages
  - Browse RFH messages
  - Add create queue
  - Add delete queue
  - Add copy queue
  - Queuemanager configuration can be read from ODBC

0.1.0
  - Web app has its own repository now: mqwebapp
  - 'filter' renamed to 'input' in mqweb JSON answer
  - 'mqweb' property in JSON answer renamed to 'meta'
  - On success the information is always stored in a 'data' array.
  - Browse DLQ messages
  - Integrate event messages in browse action. Message event action removed.
  - Dictionary tables changed: 'display' renamed into 'text'
  - Changed license from EUPL to MIT
  - Add new MQ 9.0.0 attributes
  - Add expiry to PCF messages to avoid orphaned messages when the Command
    server answers too late
  - Queuemanager configuration can be stored in SQLite
  - Add mq.web.app.cors-origin property

0.0.13
  - Upgrade documents to use latest Jekyll release
  - Use unsigned char for ebcdic code. Fix #13
  - This release is the last one with static/templates.
    New webapp will be developed in separate repository mqwebapp.
  - Empty connection id must be initialized #12

0.0.12
  - Add inquire topic
  - Add inquire topicstatus (tpstatus)
  - Add inquire subscription (sub)
  - Add inquire subscription status (sbstatus)
  - Add suspend cluster qmgr
  - Add resume cluster qmgr
  - First steps in adding websocket for browsing messages