@@ -4,6 +4,7 @@
   - Wrong action name used for remove channel
   - Put message is documented
   - Add set authrec
+  - Add delete authrec
 
 0.1.2
   - Add reset qmgr
